<resources>
    <string name="app_name">Jimmys ImageShop</string>
    <string name="string_painter_title01">빈센트 반 고흐</string>
    <string name="string_painter_title02">구스타프 클림프</string>
    <string name="string_painter_title03">램브란트</string>
    <string name="string_painter_title04">에두아르 마네</string>
    <string name="string_painter_title05">모네</string>
    <string name="string_painter_title06">파블로 피카소</string>
    <string name="string_painter_title07">카미유 피사로</string>
    <string name="string_painter_title08">에드가 드가</string>
    <string name="string_painter_title09">폴 고갱</string>
    <string name="string_painter_title10">살바도르 달리</string>
    <string name="string_painter_content01">
        빈센트 빌럼 반 고흐는 네덜란드 화가로 일반적으로 서양 미술사상 가장 위대한 화가 중 한 사람으로 여겨진다.
        그는 그의 작품 전부를 정신질환을 앓고 자살을 감행하기 전의 단지 10년 동안에 모두 만들어냈다.
        그는 생존기간 동안 거의 성공을 거두지 못하고 사후에 비로소 알려졌는데,
         특히 1901년 3월 17일 파리에서 71점의 반 고흐의 그림을 전시한 이후 그의 명성은 급속도로 커졌다.
    </string>
     <string name="string_painter_content02">
        구스타프 클림트 (Gustav Klimt, 1862년 7월 14일 - 1918년 2월 6일)는 오스트리아의 상징주의 화가이자 빈 분리파 운동의
         주요 회원이다. 클림트는 회화, 벽화, 스케치 등의 작품을 남겼다.
     </string>
     <string name="string_painter_content03">
       렘브란트 하르먼손 판 레인은 바로크 시대의 네덜란드 화가이다.
         일반적으로 유럽 미술사에서 가장 위대한 화가이자 판화가 중 한 사람으로 여겨지며
         네덜란드의 역사에서 가장 중요한 화가이기도 하다.
         예술 분야에서 그의 기여는 역사가들이 소위 네덜란드 황금 시대라고 부르는 시대를 불러오게 하였다.
    </string>
     <string name="string_painter_content04">
       에두아르 마네는 프랑스의 인상주의 화가이다.
         19세기 현대적인 삶의 모습에 접근하려 했던 화가들중의 하나로 시대적 화풍이 사실주의에서 인상파로 전환되는 데
         중추적 역할을 하였다. 그의 초기작인 풀밭위의 점심식사와 올랭피아는 엄청난 비난을 불러 일으켰으나 반면에 수많은
         젊은 화가들을 주변에 불러모으는 힘이 되었는데, 이들이 후에 인상주의를 창조하였다. 이 그림들은 오늘날 현대미술을
         창시한 분수령으로 여겨진다.
    </string>
     <string name="string_painter_content05">
         파리에서 출생하여 소년 시절을 르아브르에서 보냈다.
         그곳에서 부댕의 문하생이 되어 정식 미술 교육을 받게 되었다.
         그 후 1859년 파리로 나가 피사로·시슬레·르누아르·바지유 등과 사귀게 되었다.
         마네의 밝은 화풍에 끌려 밝은 야외 광선 묘사에 주력하였다. 마네를 중심으로 르누아르 및 피사로·드가·세잔 등과
         함께 신예술 창조에 전력하였다. 1871년, 프로이센-프랑스 전쟁 중에는 런던으로 건너가
         그곳에서 터너 등의 작품에 영향을 받아 더욱 밝은 색조에 대한 연구를 하게 되었다.
    </string>
     <string name="string_painter_content06">
         피카소는 스페인 말라가에서 출생하였고 주로 프랑스에서 미술활동을 한 20세기의 대표적 서양 화가이자 조각가이다.
         큐비즘 작품으로 널리 알려져 있으며, 대표작으로 아비뇽의 처녀들, 게르니카 등이 있다.
         피카소는 1만 3,500여 점의 그림과 700여 점의 조각품을 창작했다.
    </string>
     <string name="string_painter_content07">
        카미유 피사로 는 프랑스의 인상주의 화가이다.
         근대의 가장 훌륭한 풍경화가의 한 사람으로서 감정은 섬세하고,
         초기의 농원의 연작도 또한 아름다운 매력을 지니고 있다.
    </string>
    <string name="string_painter_content08">
       파리에서 태어난 그는 주로 발레 무용수와 경주마를 작품 소재로 삼았다.
        주로 인상주의로 분류되기는 하지만 그의 작품들 중에는 고전주의와 사실주의 색채를 띠고 낭만주의의 영향을 받은 것들도 있다.
        루이 르 그랑 중등학교를 졸업하고 파리 대학 법학부에 들어갔으나
        학업을 포기하고 1855년에 앵그르의 제자인 루이 라모트의 소개로 국립미술학교에 입학했다.
        루브르 박물관을 드나들면서 거장들의 그림을 익혔다.
        1856년부터 1년 간은 이탈리아를 여행하며 르네상스의 거장, 특히 기를란다요, 만테냐의 작품을 배우고,
        또 니콜라 푸생과 한스 홀바인의 그림도 배웠다. 1865년에 살롱에 오르레앙 시의 불행을 출품하고,
        프로이센-프랑스 전쟁 후, 인상파 전람회에 참가하였으나 뒤에는 독자적인 길을 걸었다
    </string>
     <string name="string_painter_content09">
       고갱은 프랑스 파리에서 저널리스트였던 아버지 클로비스 고갱과 프로토 사회주의자
         리더인 플로라 트리스탄이 어머니였던 알리나 마리아 차젤이라는 어머니 사이에서 태어났다.
         1850년 고갱의 아버지 클로비스는 정치적 격정기를 피해 페루로 가던 도중 죽었는데 당시 고갱의 나이는 18개월이었다.
         그 후 고갱은 7세 때에 프랑스에 돌아온다. 바다를 동경하여 선원이 되어 남미도 항해하지만
         결국 포기하고 그만두고 화가로서 새출발을 한다.
    </string>
     <string name="string_painter_content10">
      그는 카탈루냐의 피게레스(Figueres)에서 출생하였는데, 그의 형 이름 또한 살바도르였다.
         그가 태어나기 9개월 전인 1903년 8월 1일 죽었기 때문에, 그의 아버지가 같은 이름을 지어주었다.
         그의 아버지의 이름 또한 살바도르였는데 중산층 변호사였다.
         마드리드의 미술 학교에서 공부하였다. 1928년 파리로 가서 초현실주의 화가와 작가들과 사귀고,
         초현실주의 운동에 참가했다. 그의 수법은 환상적 사실주의 라고도 불린다.
         또, 영화 황금시대를 제작한 외에 로트레아몽의 시집 말도로르의 노래의 삽화를 그렸다.
    </string>
    <string name="string_photographer_title01">김중만</string>
    <string name="string_photographer_title02">로버트 카파</string>
    <string name="string_photographer_title03">배병우</string>
    <string name="string_photographer_title04">빌 커닝햄</string>
    <string name="string_photographer_title05">성남훈</string>
    <string name="string_photographer_title06">앙리 카르티에 브레송</string>
    <string name="string_photographer_title07">얀 아르튀스 베르트랑</string>
    <string name="string_photographer_title08">유진 스미스</string>
    <string name="string_photographer_title09">제나 할러웨이</string>
    <string name="string_photographer_title10">헬무트 뉴튼</string>
    <string name="string_photographer_content01">
        김중만은 대한민국의 사진가이자 영화 포스터 광고사진감독이다.
        1975년부터 사진가로 이름을 알리기 시작했다. 2011년 현재 청담동 스튜디오 벨벳언더그라운드 대표이자 NEOLOOK 편집인이다.
        보그, 엘르 프랑스 잡지사에서 프리랜서로도 활동하고 있다
    </string>
    <string name="string_photographer_content02">
        로버트 카파는 헝가리계 유태인이자 미국인으로, 세계적인 사진 에이전시 매그넘 포토스의 설립자인 동시에,
        20세기에서 유명한 전쟁 보도 사진작가로, 에스파냐 내전, 중일전쟁, 제2차 세계 대전 유럽전선, 제1차 중동 전쟁,
        제1차 인도차이나 전쟁을 취재하였다. 로버트 카파라는 이름은 유명한 미국 영화감독 프랭크 카프라의 이름을 본따 지었으며 카파
        라는 말은 헝가리어 차퍼에서 유래한 말로, 상어를 의미한다
    </string>
    <string name="string_photographer_content03">
        배병우는 1950년 전라남도 순천에서 태어나 여수에서 유년기를 보냈다. 1974년 홍익대학교 미술대학을 졸업했고,
        1976년 동 대학원을 졸업했다. 소나무, 바다, 산 등 한국의 정서를 표상하는 경관을 사진으로 담아,
        붓 대신 카메라로 그림을 그린다는 평을 받고 있는 한국의 대표적 사진작가이다.
        2005년 영국의 팝가수 엘튼 존이 그의 소나무 사진을 구입하면서 세계적으로 이름을 얻는 계기가 되었다.
        이명박 전 대통령은 워싱턴 정상회담 때 버락 오바마 미국 대통령에게 배병우의 소나무 사진집을 선물하기도 했다.
    </string>
    <string name="string_photographer_content04">
        1928년에 미국 보스턴에서 태어난 그는 뉴욕으로 왔다. 뉴욕에서 모자 디자이너와 광고업자로 일을 했다.
        작업용 파란 자켓과 카키색 바지, 검은 운동화는 커닝햄의 트레이드 마크였다.
        그는 늘 이런 차림에 목엔 사진기를 걸고 낡은 자전거로 뉴욕 거리를 누볐다.
        1967년부터 사진을 찍었고, 뉴욕 거리를 거니는 사람들의 일상과 거리 패션을 카메라에 담았다.
    </string>
    <string name="string_photographer_content05">
         전북 진안에서 태어났다. 프랑스 파리 사진대학 아카르 포토에 재학 중 루마니아 집시 가진으로 프랑스 파리그랑팔레에서 열린
        르 살룽 전에서 최우수상을 수상했다. 1991년부터 루마니아, 보스니아, 코소보, 아프가니스탄, 이라크 등 20개국에서 기록해온
        소외된 사람과 아시아의 여성에 관한 프로젝트를 계속하고 있으며 타임, 르몽드, 리베라시옹, 지오 등 세계 유수 잡지와 신문에
        사진을 기고 하고 있다.

</string>
    <string name="string_photographer_content06">
         앙리 카르티에 브레송은 프랑스의 세계적인 사진작가이다.
        현대 사진에 큰 영향을 준 작가로, 보도 사진이 예술로 인정받는 데 큰 기여를 하였다.
        일상적인 리얼리티를 잘 반영하고 절묘하게 순간을 잡아내는 결정적 순간으로 알려진 그의 작품들은 세계적으로 매우 유명하며,
        1947년 헝가리의 사진작가 로버트 카파 등과 함께 보도사진 작가그룹인 매그넘 포토스를 세웠다.
        라이카사진 기술의 대표적인 거장이다.

    </string>
    <string name="string_photographer_content07">
         얀 아르튀스 베르트랑은 국제적으로 유명한 프랑스 사진작가이다.
        17살때 그는 영화감독보조로 일했고 곧 배우로 일하게된다.
        하지만 1967년 그는 프랑스의 공원운영을 위해 영화계를 떠나게된다 그리고 그가 30살이 되었을 때
        케냐의 마사이 마라 국립공원에 거주하기 위해 그의 아내 안나와 떠나게 된다
    </string>
    <string name="string_photographer_content08">
         윌리엄 유진 스미스는 미국의 사진저널리스트이다. 제2차 세계 대전에서 종군작가로 활약하여 명성을 얻었다.
        오키나와, 이오지마, 괌, 사이판 등 태평양 전쟁의 주요 전장을 돌아다니며 미국 해병대와 일본군 포로들의 모습을 카메라에 담았다.
        후에 일본의 미나마타 병을 집중취재하여 그 존재를 세상에 알렸으나,
        1972년 공해책임회사인 치소가 고용한 폭력배에게 폭행당하여 척추 손상 및 한쪽 눈 실명이라는 중상을 입었다.
    </string>
    <string name="string_photographer_content09">
         제나 할러웨이는 수중사진 분야를 한 단계 발전시킨 작가라고 할 수 있다.
        18세에 스쿠버 다이빙 강사로 활동하며 수중사진을 실험했고 필수적인 사진기법을 독학으로 터득했다.
        현재는 영국 런던을 중심으로 전세계를 무대로 활동하고 있고, 아름답고 몽환적인 사진이미지로 많은 사랑을 받고 있다.
    </string>
    <string name="string_photographer_content10">
         1960년대 보그, 엘르, 플레이보이등 세계적인 잡지에서 일하면서 패션 누드라는 영역을 새롭게 개척했고
        그러한 공으로 모나코, 독일, 프랑스등에서 훈장까지 받은 패션사진작가이다.
        그는 모델에게 옷을 입히고 벗기는 작업을 통해 에로티시즘을 충격적일만큼 강렬하게 연출해냈고
        흑백사진의 강렬함을 이용해 섹시하고 엣지있는 이미지를 많이 탄생시켰다.
    </string>
    <string-array name="museum_array">
        <item>1. 메트로폴리탄 미술관</item>
        <item>2. 가드너 미술관</item>
        <item>3. 테이트 갤러리</item>
        <item>4. 루브르 박물관</item>
        <item>5. 바티칸 미술관</item>
        <item>6. 피카소 미술관</item>
        <item>7. 렘브란트 미술관</item>
        <item>8. 고흐 미술관</item>
        <item>9. 뭉크 미술관</item>
        <item>10. 프라하 국립미술관</item>
    </string-array>
    <string name="museum_content01">
        메트로폴리탄 미술 박물관은 미국 뉴욕 주 뉴욕 맨해튼 어퍼 이스트 사이드에 있는 세계적인 미술관이다.
        1866년에 파리에서 미국 독립기념일을 축하하기 위해 모인 미국인들의 회합에서 설립이 제안되어,
        1870년에 소규모로 개관하였다. 1880년에 지금의 자리로 이전하였으며,
        기금을 통한 구입과 기증 등으로 소장 미술품은 급증하게 되었다.
        지금은 회화와 조각, 사진, 공예품 등 300여만 점이 소장되어 있다.
        메트로폴리탄 미술관의 특색은 그 소장 유물의 폭이 동서고금을 막론하는, 전 시대와 지역에 걸쳐있다는 점이다.
        또한 이러한 미술관이 국가나 정부 기관의 주도가 아닌 순수하게 민간이 주도하여 설립되었다는 점이다.
        미술관의 운영 관리는 평의원회(Board of Trusty)가 담당하고 있다.
        창립 100주년인 1970년부터 시작된 개조 계획(The Master Plan)에 의하여 미술관의 건평은 크게 확장되었다.
        또한 1938년에 개관한 포트 트라이언 파크의 분관 클로이스터스(The Cloisters)는 중세 유럽의 미술품을 전시하고 있다.
    </string>
    <string name="museum_content02">
        보스턴에 소재한 미술관으로, 정식명칭은 이사벨라 스튜어트 가드너 미술관이다.
        뉴욕 출생의 수집가인 이사벨라 스튜어트 가드너 부인(1840~1924)의 컬렉션을 모은 것으로 베네치아
        고딕풍인 그녀의 저택을 미술관으로 사용하게 되었다. 소장품들은 이집트 미술로부터
        인상주의에 이르기까지 광범위하나 특히 베렌슨의 조언에 따라 수집한 이탈리아 르네상스 시기의 작품이 유명하다.
        보티첼리의 루크레치아 이야기, 티치아노의 에우로페의 약탈 등의 명작이 소장되어 있다.
    </string>
    <string name="museum_content03">
        2000년 5월 12일 개관한 테이트 모던은 영국 정부의 밀레니엄 프로젝트의 일환으로 템즈강변의
        뱅크사이드(Bankside) 발전소를 새롭게 리모델링한 곳에 들어섰다. 뱅크사이드 발전소는 2차 세계대전
        직후 런던 중심부에 전력을 공급하기 위해 세워졌던 화력발전소로 영국의 빨간 공중전화 박스 디자인으로도
        유명한 건축가 길버트 스코트(Giles Gilbert Scott)에 의해 지어졌으며 공해문제로 이전한 이후 1981년
        문을 닫은 상태였다. 영국 정부와 테이트 재단은 템즈강변에 자리하고 있으면서 넓은 건물면적과 지하철역에서도
        가까운 이 발전소를 현대미술관을 지을 장소로 낙점하고 국제 건축 공모전을 통해 선정된 스위스 건축회사
        헤르초크, 드 뫼롱(Herzog와 de Meuron)이 테이트모던 프로젝트에 참여하게 된다.
        약 8년여 간의 공사기간 끝에 지어진 본 건물은 기존의 외관은 최대한 손대지 않고 내부는 미술관의
        기능에 맞춰 완전히 새로운 구조로 바꾸는 방식으로 개조되었다.
        총 높이 99m직육면체 외형의 웅장한 테이트 모던은 모두 7층으로 구성되어 있으며 건물 한가운데 원
        래 발전소용으로 사용하던 높이 99m의 굴뚝이 그대로 솟아 있는데, 반투명 패널을 사용하여 밤이면
        등대처럼 빛을 내도록 개조하여 이 굴뚝은 오늘날 테이트 모던의 상징이 되었다. 미술관 건물 자체만으로도 볼
        거리가 된 테이트 모던은 한해 400만명 이상의 관광객이 찾는 런던의 새로운 관광명소가 되었다.
    </string>
    <string name="info_title01">1. 제작자</string>
    <string name="info_title02">2. 제작완료일</string>
    <string name="info_title03">3. 버전 정보</string>
    <string name="info_title04">4. 애플리케이션 소개</string>
    <string name="info_title05">5. 연락처</string>
    <string name="info_title06">6. 후기</string>
    <string name="info_title07">7. 저작권</string>
    <string name="info_context01">
        도낙원(Jimmy)
    </string>
    <string name="info_context02">
        1차 완료일 2017년 03월 02일
    </string>
    <string name="info_context03">
        이미지샵 version 1.0
    </string>
    <string name="info_context04">
    그림판: 그림을 그리고 저장하는 기능\n
        이용자들이 손이나 터치펜을 이용하여 취미로 그림을 즐기는 사람들이나 메모장의 역할을 하는 목적으로 만들었으며,
        색상 변경과 포인터 크기를 조절할 수 있게끔 만들었으며, 저장과 불러오기 기능을 추가하였다.
        저장의 경우 스마트폰 안의 공용디렉토리에 저장하고 파일 이름에 현재 시간을 불러와 저장하게 하여 덮어쓰는 경우를 없앴다.
    이미지변환: 이미지의 사이즈, 위치, 톤 등을 변환하는 기능\n
        이미지의 분위기와 사이즈 변경을 통해 이용자들이 원하는 이미지를 얻을 수 있도록 하는 목적으로 만들었으며,
        이미지를 저장하는 것은 이름에 현재 시간을 불러와 저장하게 하여 덮어쓰는 경우를 없앴으며, 공용디렉토리 안에
        새로운 파일을 만들어 그곳에 이미지를 저장하게끔 만들었다. 사이즈변환, 위치변환, 각도 변환, 톤 변환 등의 기능을 가지고 있다.
    이미지변환(Glide library): Glide library를 이용 이미지 변환\n
        이미지의 분위기와 사이즈 변경을 통해 이용자들이 원하는 이미지를 얻을 수 있도록 하는 목적으로 만들었으며,
        glide를 이용하지 않은 이미지변환의 경우 다른 기능을 구현하는데 시간이 오래 걸리고 간단하게 구현하기 어려워 glide library를
        이용하여 이전에 사용하지 못했던 새로운 기능들을 추가하여 이용자들이 더 많은 기능을 이용하게끔 구현했다.
    명화 보기: 유명한 화가 소개 및 작품 소개\n
        이용자들이 유명 화가들의 작품을 보고 영감, 색감 등을 얻으므로써 그림을 그리는데 도움을 주는 목적으로 구현했으며,
        이미지 화질을 고려하여 glide library를 이용하여 최대한 화질을 유지하게끔 만들었다.
    사진 보기: 유명한 사진작가 소개 및 작품 소개\n
    미술관 보기: 세계 유명한 미술관 소개
    </string>
    <string name="info_context05">
    한국 IT 교육원\n
    이름: 도낙원(JIMMY)\n
    이메일: ahwk321@gmail.com\n
    전화번호: 010-9909-8420</string>
    <string name="info_context06">

    </string>
    <string name="info_context07">
        Copyright by JIMMY\n
    </string>
</resources>